samples/_failures_safe/1761313010_cf3f18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4087899.c: In function ‘main’:
./samples/SAFE/__tmp_d4087899.c:144:12: error: missing terminating " character
  144 |     printf("\nFiltered logs for %
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d4087899.c:144:5: error: expected expression at end of input
  144 |     printf("\nFiltered logs for %
      |     ^~~~~~
./samples/SAFE/__tmp_d4087899.c:144:5: error: expected declaration or statement at end of input
